# prompt-compress

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HERMES_INTEGRATION_PLAN.md  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml
crates/compress-api/: Cargo.toml
crates/compress-api/src/: dto.rs  main.rs  middleware.rs  routes.rs  state.rs
crates/compress-api/tests/: api_test.rs  routes_test.rs
crates/compress-cli/: Cargo.toml
crates/compress-cli/src/: main.rs
crates/compress-cli/tests/: cli_tests.rs
crates/compress-core/: Cargo.toml
crates/compress-core/examples/: benchmark.rs
crates/compress-core/src/: compressor.rs  config.rs  error.rs  lib.rs  model.rs  model_loader.rs  scorer.rs  tokenizer.rs
crates/compress-core/tests/: compressor_tests.rs  config_tests.rs  error_tests.rs  model_tests.rs  scorer_tests.rs  tokenizer_tests.rs
hermes-plugin/: __init__.py  plugin.yaml
hermes-plugin/tests/: test_plugin.py
hermes-skill/: SKILL.md  install.sh
hermes_plugin/: __init__.py  install.sh  plugin.yaml
hermes_plugin/tests/: test_plugin.py
integrations/claude-code/prompt-compress/.claude-plugin/: plugin.json
integrations/claude-code/prompt-compress/hooks/: compress-prompt.sh  hooks.json
integrations/openclaw/prompt-compress/: README.md  index.ts  openclaw.plugin.json  package.json
models/: model.onnx
scripts/: claude-chat-compress  claude-compress  codex-chat-compress  codex-compress  codex-proxy  publish-wiki.sh  start-api-server.sh
sdk/python/: .gitignore  pyproject.toml
sdk/python/prompt_compress/: __init__.py  client.py  middleware.py  models.py
sdk/python/tests/: test_client.py  test_integration.py  test_middleware.py
training/: corpus.txt  data.jsonl  data_claude.jsonl  data_claude_test.jsonl  evaluate.py  export_onnx.py  generate_corpus.py  prepare_dataset.py  requirements.txt  train.py
wiki/: Benchmarks.md  CLI-Reference.md  Codex-Integration.md  Home.md  Model-Distribution-(LFS-and-Releases).md  OpenClaw-Integration.md  Provider-Gateway-Proxy.md  Quick-Start.md  Troubleshooting.md
