[package]
name = "compress-api"
version.workspace = true
edition.workspace = true

[dependencies]
compress-core = { path = "../compress-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "decompression-gzip", "trace", "cors"] }
http = "1"

[dev-dependencies]
axum-test = "19"
