[package]
name = "compress-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "compress"
path = "src/main.rs"

[dependencies]
compress-core = { path = "../compress-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
