[package]
name = "compress-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tiktoken-rs = "0.9"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray"] }
ndarray = "0.16"
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
