[package]
name = "compress-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tiktoken-rs = "0.9"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native"] }
ndarray = "0.17"
regex = "1"
dirs = { version = "5", optional = true }
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }

[features]
default = []
download = ["dep:dirs", "dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
